--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,12 @@ pydub==0.23.1
 pygame==1.9.6
 pyowm==2.10.0
 PyQt5==5.9.2
+python-forecastio==1.4.0
 python-vlc==3.0.6109
 qtmodern==0.1.4
 QtPy==1.7.1
 requests==2.22.0
+responses==0.10.6
 sip==4.19.8
+six==1.12.0
 urllib3==1.25.3
